feat:user domain and authentication
