# internal/dto/author.go
@@ -1,0 +1,6 @@
+package dto
+
+type AuthorCreateDTO struct {
+	Name string `json:"name" validate:"required"`
+	Bio  string `json:"bio" validate:"required"`
+}
