# internal/infrastructure/database/user_repo.go
@@ -1,0 +1,26 @@
+package database
+
+import (
+	"github.com/sorrawichYooboon/clean-arch-domain-driven-golang/internal/domain"
+	"gorm.io/gorm"
+)
+
+type UserRepositoryImpl struct {
+	db *gorm.DB
+}
+
+func NewUserRepository(db *gorm.DB) *UserRepositoryImpl {
+	return &UserRepositoryImpl{db: db}
+}
+
+func (r *UserRepositoryImpl) Create(user *domain.User) error {
+	return r.db.Create(user).Error
+}
+
+func (r *UserRepositoryImpl) FindByUsername(username string) (*domain.User, error) {
+	var user domain.User
+	if err := r.db.Where("username = ?", username).First(&user).Error; err != nil {
+		return nil, err
+	}
+	return &user, nil
+}
