# internal/infrastructure/http/controller/book_handler.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/labstack/echo/v4"
 	"github.com/sorrawichYooboon/clean-arch-domain-driven-golang/internal/domain"
+	"github.com/sorrawichYooboon/clean-arch-domain-driven-golang/internal/dto"
 	"github.com/sorrawichYooboon/clean-arch-domain-driven-golang/internal/usecase"
 )
 
@@ -24,6 +25,7 @@ func NewBookHandler(uc *usecase.BookUseCase) *BookHandler {
 // @Description Get all books from the database
 // @Tags books
 // @Produce json
+// @Security ApiKeyAuth
 // @Success 200 {array} domain.Book
 // @Failure 500 {object} map[string]string
 // @Router /books [get]
@@ -42,22 +44,23 @@ func (h *BookHandler) GetAll(c echo.Context) error {
 // @Tags books
 // @Accept json
 // @Produce json
-// @Param book body domain.Book true "Book data"
-// @Success 200 {object} domain.Book
+// @Security ApiKeyAuth
+// @Param book body dto.BookCreateDTO true "Book data"
+// @Success 200 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Router /books [post]
 func (h *BookHandler) Create(c echo.Context) error {
-	book := new(domain.Book)
-	if err := c.Bind(book); err != nil {
+	bookDTO := new(dto.BookCreateDTO)
+	if err := c.Bind(bookDTO); err != nil {
 		return err
 	}
 
-	err := h.UseCase.CreateBook(book)
+	err := h.UseCase.CreateBook(bookDTO.Title, bookDTO.Author, bookDTO.Category, bookDTO.PublishedYear)
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, map[string]string{"error": err.Error()})
 	}
 
-	return c.JSON(http.StatusOK, book)
+	return c.JSON(http.StatusOK, map[string]string{"status": "create book successfully"})
 }
 
 // Update godoc
@@ -66,8 +69,9 @@ func (h *BookHandler) Create(c echo.Context) error {
 // @Tags books
 // @Accept json
 // @Produce json
+// @Security ApiKeyAuth
 // @Param id path int true "Book ID"
-// @Param book body domain.Book true "Book data"
+// @Param book body dto.BookCreateDTO true "Book data"
 // @Success 200 {object} domain.Book
 // @Failure 404 {object} map[string]string
 // @Failure 500 {object} map[string]string
@@ -79,8 +83,17 @@ func (h *BookHandler) Update(c echo.Context) error {
 		return c.JSON(http.StatusNotFound, map[string]string{"error": "Book not found"})
 	}
 
-	if err := c.Bind(&book); err != nil {
+	bookDTO := new(dto.BookCreateDTO)
+	if err := c.Bind(&bookDTO); err != nil {
 		return err
+	}
+
+	book = &domain.Book{
+		ID:            book.ID,
+		Title:         bookDTO.Title,
+		Author:        bookDTO.Author,
+		PublishedYear: bookDTO.PublishedYear,
+		Category:      bookDTO.Category,
 	}
 
 	h.UseCase.UpdateBook(book)
@@ -91,8 +104,9 @@ func (h *BookHandler) Update(c echo.Context) error {
 // @Summary Delete a book
 // @Description Delete the book with the given ID
 // @Tags books
+// @Security ApiKeyAuth
 // @Param id path int true "Book ID"
-// @Success 204
+// @Success 204 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Router /books/{id} [delete]
 func (h *BookHandler) Delete(c echo.Context) error {
@@ -101,5 +115,5 @@ func (h *BookHandler) Delete(c echo.Context) error {
 		return c.JSON(http.StatusInternalServerError, map[string]string{"error": err.Error()})
 	}
 
-	return c.NoContent(http.StatusNoContent)
+	return c.JSON(http.StatusOK, map[string]string{"status": "delete book successfully"})
 }
