# internal/infrastructure/middlewware/auth_middleware.go
@@ -1,0 +1,38 @@
+package middleware
+
+import (
+	"net/http"
+	"strings"
+
+	"github.com/dgrijalva/jwt-go"
+	"github.com/labstack/echo/v4"
+)
+
+func AuthMiddleware(secretKey string) echo.MiddlewareFunc {
+	return func(next echo.HandlerFunc) echo.HandlerFunc {
+		return func(c echo.Context) error {
+			authHeader := c.Request().Header.Get("Authorization")
+			if authHeader == "" {
+				return c.JSON(http.StatusUnauthorized, echo.Map{"error": "Authorization header missing"})
+			}
+
+			if !strings.HasPrefix(authHeader, "Bearer ") {
+				return c.JSON(http.StatusUnauthorized, echo.Map{"error": "Authorization header must start with 'Bearer '"})
+			}
+
+			tokenString := strings.Split(authHeader, " ")[1]
+			token, err := jwt.Parse(tokenString, func(token *jwt.Token) (interface{}, error) {
+				if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
+					return nil, echo.ErrUnauthorized
+				}
+				return []byte(secretKey), nil
+			})
+
+			if err != nil || !token.Valid {
+				return c.JSON(http.StatusUnauthorized, echo.Map{"error": "Invalid token"})
+			}
+
+			return next(c)
+		}
+	}
+}
